chore: remove username from user model
