# docs/api.yml
@@ -414,8 +414,6 @@ components:
         id:
           type: string
           format: uuid
-        username:
-          type: string
         firstName:
           type: string
         lastName:
@@ -432,7 +430,6 @@ components:
           format: date-time
       required:
         - id
-        - username
         - firstName
         - lastName
         - avatarUrl
@@ -443,8 +440,6 @@ components:
       type: object
       properties:
         id:
-          type: string
-        username:
           type: string
         lastName:
           type: string
@@ -460,7 +455,6 @@ components:
           format: date-time
       required:
         - id
-        - username
         - lastName
         - firstName
         - email
